Fix icon misalignment on tablet breakpoints (#458)

--- a/src/site/_styles/docs.scss
+++ b/src/site/_styles/docs.scss
@@ -137,7 +137,11 @@ hr {
 .illustratedexamples-item {
   text-align: center;
   list-style-type: none;
-  min-height: 217px;
+  min-height: 270px;
+
+  @media #{$mt3_mq-lg} {
+    min-height: 217px;
+  }
 }
 
 .circle {
